[gd_scene load_steps=5 format=3 uid="uid://cywftev8o3q5n"]

[ext_resource type="Script" path="res://scripts/covered_button.gd" id="1_h7tp7"]
[ext_resource type="Texture2D" uid="uid://qap6crr7x770" path="res://icon.svg" id="1_qjih7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j5i4b"]
radius = 65.3617

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwymm"]
size = Vector2(124.887, 126.778)

[node name="CoveredButton" type="Node2D"]
position = Vector2(147, 69)
script = ExtResource("1_h7tp7")

[node name="Button" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-82, 10)
scale = Vector2(0.367188, 0.390625)
texture = ExtResource("1_qjih7")

[node name="ButtonArea" type="Area2D" parent="Button"]

[node name="ButtonCollider" type="CollisionShape2D" parent="Button/ButtonArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_j5i4b")

[node name="Cover" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.364706)
top_level = true
position = Vector2(62, 76)
scale = Vector2(0.554688, 0.5625)
texture = ExtResource("1_qjih7")

[node name="CoverArea" type="Area2D" parent="Cover"]

[node name="CoverCollider" type="CollisionShape2D" parent="Cover/CoverArea"]
unique_name_in_owner = true
position = Vector2(1.80282, 3.39746e-06)
shape = SubResource("RectangleShape2D_nwymm")

[node name="Timer" type="Timer" parent="Cover"]
unique_name_in_owner = true
one_shot = true

[connection signal="mouse_entered" from="Button/ButtonArea" to="." method="_on_button_area_mouse_entered"]
[connection signal="mouse_exited" from="Button/ButtonArea" to="." method="_on_button_area_mouse_exited"]
[connection signal="mouse_entered" from="Cover/CoverArea" to="." method="_on_cover_area_mouse_entered"]
[connection signal="mouse_exited" from="Cover/CoverArea" to="." method="_on_cover_area_mouse_exited"]
[connection signal="timeout" from="Cover/Timer" to="." method="_on_timer_timeout"]
